fixed error in HTML code and added title to first post

--- a/_posts/2015-04-29-lessons.md
+++ b/_posts/2015-04-29-lessons.md
@@ -2,6 +2,7 @@
 layout: post
 title: Programming Lessons
 ---
+#Programming Lessons
 
 Shortly after I started learning Ruby, my primary instructor created a master list of 77 things I needed to know before I could call myself a Ruby Developer.
 
