--- a/_posts/2015-04-29-lessons.md
+++ b/_posts/2015-04-29-lessons.md
@@ -2,7 +2,8 @@
 layout: post
 title: Programming Lessons
 ---
-<title>Programming Lessons</title>
+
+#Programming Lessons
 
 Shortly after I started learning Ruby, my primary instructor created a master list of 77 things I needed to know before I could call myself a Ruby Developer.
 
