minor grammar edits to The List

--- a/_posts/2015-05-07-list.md
+++ b/_posts/2015-05-07-list.md
@@ -10,7 +10,7 @@ A caveat here. I did not write this list. It was written by my instructor, James
 
 James is a former member of the [Ruby Rogues Podcast](devchat.tv/ruby-rogues/), and you can get his take on a lot of these topics in detail there. Ruby Rogues is a great resource for any Ruby developer, at just about any level of experience. I'm slowly working my way through the back catalog.
 
-I have his permission to share the list here. I take no responsibility of his liberal use of the Oxford comma, for which there is no excuse. 
+I have his permission to share the list here. I take no responsibility for his liberal use of the Oxford comma, for which there is no excuse. 
 
 ##Programming Lessons
 =====================
@@ -45,7 +45,7 @@ I have his permission to share the list here. I take no responsibility of his li
 * Core, standard library (for serialization, HTTP, etc.), and RubyGems
 * Project layout
 * Code style
-* Dynamic Ruby: open classes, hooks, metaprogramming, and DSL'sl
+* Dynamic Ruby: open classes, hooks, metaprogramming, and DSL's
 * Unit testing
 * Test doubles
 * Test-driven Development (TDD)
