--- a/_posts/2015-06-17-Sinatra.md
+++ b/_posts/2015-06-17-Sinatra.md
@@ -11,7 +11,7 @@ For those who haven't used it before, [Sinatra](http://www.sinatrarb.com/) is a 
 
 Now, at this point you may be asking me, 'Clayton, isn't that what Rails does?' Well, yes it is. But Rails is a behemoth with a lot of magic that happens under the hood, magic that very few people really understand.
 
-Sinatra doesn't build directories for you. You write all of your own routes. It doesn't expect you to use gems like Devise for user authentication.
+Sinatra doesn't build directories for you. You write all of your own routes. In short, you learn more about how web applications are built using Sinatra than you do Rails.
 
 Basically, Sinatra is a web app builder that doesn't hold your hand, let's you see most of what is happening, and doesn't punish for going off the Rails, so to speak.
 
