--- a/_posts/2015-11-01-POODR.md
+++ b/_posts/2015-11-01-POODR.md
@@ -19,13 +19,13 @@ Almost every person I've talked to about POODR said some variation on these thre
 
 POODR deals with some concepts that, if you are a new or intermediate developer in an Object-Oriented language, or if you're an experienced developer in non-OO langauges but fairly new to OO, can be difficult to approach and grasp. Sandi does a great job of making them as accessible as possible, but difficult concepts that require some level of experience to internalize are just that.
 
-All of that said, puzzling through POODR with a few others who are fairly new to these concepts in a collaborative setting, where nobody is really considered an authority and nobody has conceptual turf to defend, may be the best possible way for newer developers to approach this book. It gives them the opportunity to puzzle through questions together and come to tentative conclusions. 
+All of that said, puzzling through POODR with a few others who are fairly new to these concepts in a collaborative setting, where nobody is really considered an authority and nobody has conceptual turf to defend, may be the best possible way for newer developers to approach this book. It gives them the opportunity to work through questions together and come to tentative conclusions. 
 
-More than once, someone in our discussions has had a misconception cleared up, or been able to grasp a concept they couldn't get their head around on their own, because they had other people there with them to try to wrestle through it with them.
+More than once, someone in our discussions has had a misconception cleared up, or been able to grasp a concept they couldn't get their head around on their own, because they had other people there with them to try to wrestle through it.
 
 ##Recording the Discussions
 
-By recording and posting online what we've said, we get a two-fold benefit. Not only does it allow those who wish to participate, but have missed one week or more weeks, the opportunity to get current, it also provides a certain level of accountability. More people watch the videos of the Google Hangouts than ever participate in them, and on more than one occassion they've come into the slack channel to further explain some topic we had puzzled about or discuss something that was said in the recording that they disagreed with. Despite the moniker, not everyone in Code Newbies is new to code, and having more experience Rubyists come in and clarify for us something we'd had issues with, or help us understand where we went wrong, has always been a help.
+By recording and posting online what we've said, we get a two-fold benefit. Not only does it allow those who wish to participate, but have missed one or more weeks, the opportunity to get current, it also provides a certain level of accountability. More people watch the videos of the Google Hangouts than ever participate in them, and on more than one occassion they've come into the slack channel to further explain some topic we had puzzled about or discuss something that was said in the recording that they disagreed with. Despite the moniker, not everyone in Code Newbies is new to code, and having more experienced Rubyists come in and clarify for us something we'd had issues with, or help us understand where we went wrong, has always been a help.
 
 ##Breaking Discussions up by Chapters
 
@@ -33,17 +33,17 @@ Book clubs I've participated in in the past have always, even when they've recor
 
 By breaking up the chapters and really digging into them as a group, one week at a time, it allowed us to shore up the concepts we thought we understood, and finally come to get our heads around the ones we'd missed.
 
-It isn't uncommon for us in these later chapters to reference ideas from earlier in the book to explain some new concept. POODR builds on itself forming a kind of ladder, one rung at a time, creating a conceptual scaffold for the really important tools and ideas in the later chapters of the book. 
+It isn't uncommon for us in these later chapters to reference ideas from earlier in the book to explain some new concept. POODR builds on itself forming a kind of ladder, one rung at a time, creating a conceptual scaffold for the really important tools and ideas in the later chapters. 
 
 ### Wittgenstein's Ladder
 
-A short conceptual digression...
+A short philosophical digression...
 
 This idea of the book being like a ladder is perfectly illustrated in the concept of [Wittgenstein's Ladder](http://plato.stanford.edu/entries/wittgenstein/). In his early work, Wittgenstein purposely wrote ideas he new were wrong, but necessary to work through to get his readers to a place where they could approach his later writings. He talks about using this ladder to reach a higher level of understanding, and then kicking away the ladder of wrong ideas that got us there.
 
 Sandi does the exact same thing both within and between chapters of POODR. She'll approach some problem, and show common procedural or misguided OO paths people will often take, before using whatever concept she's trying to introduce to rescue the code. By showing how to do it other ways and giving us a glimpse into the dark paths they can lead down, she shows the advantages of her approach. 
 
-But she also doesn't let good code get out in front of whatever concept she is trying to illustrate. Early in the book, if Sandi is introducing a concept, she'll solve the problem with that concept, even if there are better things to do that she will be introducing later. She'll mention that the code she is presenting isn't optimal, but it's the best available with the tools she's provided so far in the book. It takes knowing those tools, having those rungs in the later, to get to later concepts like duck typing, module inheritance, and object composition. Then, when the reader has reached a place of better understanding, she'll drag up the useful parts of these ideas, and kick away the rest.
+But she also doesn't let good code get out in front of whatever concept she is trying to illustrate. Early in the book, if Sandi is introducing a concept, she'll solve the problem with that concept, even if there are better things to do that she will be introducing later. She'll mention that the code she is presenting isn't optimal, but it's the best available with the tools she's provided so far in the book. It takes knowing those tools, having those rungs in the ladder, to get to later concepts like duck typing, module inheritance, and object composition. Then, when the reader has reached a place of better understanding, she'll drag up the useful parts of these ideas, and kick away the rest.
 
 ##Future Discussions
 
