Updated username info and added Elm copy post

--- a/_posts/2016-01-14-ure_gem.md
+++ b/_posts/2016-01-14-ure_gem.md
@@ -5,7 +5,7 @@ title: Ure Gem
 
 #I call it ure, because it follows Struct
 
-I recently published [Ure](https://github.com/Calvyn82/ure), a Ruby Gem that attempts to improve on Ruby's [Struct Class](http://ruby-doc.org/core-2.2.3/Struct.html). 
+I recently published [Ure](https://github.com/claytonflesher/ure), a Ruby Gem that attempts to improve on Ruby's [Struct Class](http://ruby-doc.org/core-2.2.3/Struct.html). 
 
 ##A short introduction to the problems with Struct
 
